k8s/backend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/identity-nonprod/dummy-backend:latest
          resources:
            requests:
              cpu: 70m
              memory: 128Mi
          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 25
            timeoutSeconds: 3
