k8s/backend/service-with-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    cloud.google.com/load-balancer-type: "internal"
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: backend
