k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: backend
