k8s/backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  backend:
    serviceName: backend
    servicePort: 80
